# diffusion-motion-planning

./: .gitignore  .yamllint  README.md  alcove_unicycle.pt  best.pt  best_1.pt  data.py  db.py  diffusion_model.py  main.py  model_runner.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  tests.py  tune.py  unicycle.pt  unicycle_1.pt
data/: alcove_unicycle_single.yaml  data.yaml
diffmp/: __init__.py
diffmp/dynamics/: __init__.py  base.py  unicycle1.py  unicycle2.py  unicycle_1.py
diffmp/torch/: __init__.py  loss.py  model.py  schedules.py  train.py
diffmp/utils/: __init__.py  config.py  data.py
schemas/: composite.config.json  standard.config.json
scripts/: benchmark.py  conf.yaml  create_dataset.py  create_test.py  optuna_wrapper.py  plot_mps.py  plot_results.py  plot_results_mod.py  script_train.py  single_dbcbs.py  test_3d_env.py  test_plot.py  unicycle1_v0.yaml  unicycle2_v0.yaml
src/diffmp/: __init__.py
src/diffmp/dynamics/: __init__.py  base.py  car1.py  integrator2_3d.py  unicycle1.py  unicycle2.py
src/diffmp/problems/: __init__.py  environment.py  etc.py  instance.py  obstacle.py  obstacle_old.py  robots.py
src/diffmp/torch/: __init__.py  classifier.py  dataset.py  env_encoder.py  loss.py  model.py  normalize.py  sample.py  schedules.py  timestep.py  train.py
src/diffmp/utils/: __init__.py  config.py  data.py  dbcbs_ext.py  h5_helpers.py  reporting.py  vec.py
tests/: test_dynamics.py  test_train.py
