[metadata]
name = DiffMP
description = Motion Primitives generation by DDPMs 
author = Julius Franke
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    diffmp
install_requires =
    geomloss>=0.2.6
    numpy>=2.2.0
    pandas>=2.2.3
    PyYAML>=6.0.2
    tqdm>=4.67.1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160
